--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,10 @@ before_install:
   - export FUEL_DATA_PATH=$TRAVIS_BUILD_DIR/data
 install:
   # Install all Python dependencies
-  - curl -O -O https://raw.githubusercontent.com/bartvm/blocks/master/req-travis-{conda,pip}.txt
+  - curl -O https://raw.githubusercontent.com/bartvm/blocks/master/req-travis-conda.txt
   - conda install -q --yes python=$TRAVIS_PYTHON_VERSION mkl --file req-travis-conda.txt
-  - pip install -q -r req-travis-pip.txt
+  - pip install -q -r https://raw.githubusercontent.com/bartvm/blocks/master/req-travis-pip.txt
+  - pip install -q git+git://github.com/bartvm/blocks.git -r https://raw.githubusercontent.com/bartvm/blocks/master/requirements.txt
 script:
   - curl https://raw.githubusercontent.com/bartvm/fuel/download_travis/.travis-data.sh | bash -s -- mnist
   - nose2 tests
