--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ branches:
   only:
     - master
 language: python
-python:
-  - "2.7"
-  - "3.4"
-env:
-  - TESTS=float32
-  - TESTS=float64
+matrix:
+  include:
+    - python: 2.7
+      env: FLOATX=float32
+    - python: 3.4
+      env: FLOATX=float64
 before_install:
   - # Setup Python environment with BLAS libraries
   - wget -q http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
@@ -26,7 +26,8 @@ install:
   - conda install -q --yes python=$TRAVIS_PYTHON_VERSION mkl --file req-travis-conda.txt
   - pip install -q -r https://raw.githubusercontent.com/bartvm/blocks/master/req-travis-pip.txt
   - pip install -q git+git://github.com/bartvm/blocks.git -r https://raw.githubusercontent.com/bartvm/blocks/master/requirements.txt
-script:
   - curl https://raw.githubusercontent.com/bartvm/fuel/download_travis/.travis-data.sh | bash -s -- mnist
-  - bokeh-server &> /dev/null &
+script:
+  - export THEANO_FLAGS=floatX=$FLOATX,optimizer=fast_compile
+  - export FUEL_FLOATX=$FLOATX
   - nose2 tests
