--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
   - conda install -q --yes python=$TRAVIS_PYTHON_VERSION mkl --file req-travis-conda.txt
   - pip install -q -r https://raw.githubusercontent.com/bartvm/blocks/master/req-travis-pip.txt
   - pip install -q git+git://github.com/bartvm/blocks.git -r https://raw.githubusercontent.com/bartvm/blocks/master/requirements.txt
+  - pip install -q git+git://github.com/mila-udem/blocks-extras.git 
   - curl https://raw.githubusercontent.com/bartvm/fuel/download_travis/.travis-data.sh | bash -s -- mnist
 script:
   - export THEANO_FLAGS=floatX=$FLOATX,optimizer=fast_compile
