--- a/.travis.yml
+++ b/.travis.yml
@@ -32,5 +32,5 @@ install:
 script:
   - export THEANO_FLAGS=floatX=$FLOATX,optimizer=fast_compile
   - export FUEL_FLOATX=$FLOATX
-  - bokeh-server
+  - bokeh-server &
   - nose2 tests
