Verbose mode for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,4 @@ script:
   - export THEANO_FLAGS=floatX=$FLOATX,optimizer=fast_compile
   - export FUEL_FLOATX=$FLOATX
   - bokeh-server &
-  - nose2 tests
+  - nose2 -v tests
