--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 install:
   # Install all Python dependencies
   - curl -O https://raw.githubusercontent.com/mila-udem/blocks/master/req-travis-conda.txt
-  - conda install -q --yes python=$TRAVIS_PYTHON_VERSION mkl --file req-travis-conda.txt
+  - conda install -q --yes python=$TRAVIS_PYTHON_VERSION --file req-travis-conda.txt
   - pip install -q -r https://raw.githubusercontent.com/bartvm/blocks/master/req-travis-pip.txt
   - pip install -q git+git://github.com/mila-udem/blocks.git -r https://raw.githubusercontent.com/mila-udem/blocks/master/requirements.txt
   - pip install -q git+git://github.com/mila-udem/blocks-extras.git 
