--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ install:
   - pip install -q -r https://raw.githubusercontent.com/bartvm/blocks/master/req-travis-pip.txt
   - pip install -q git+git://github.com/mila-udem/blocks.git -r https://raw.githubusercontent.com/mila-udem/blocks/master/requirements.txt
   - pip install -q git+git://github.com/mila-udem/blocks-extras.git 
-  - conda install -q --yes bokeh==0.9.0
+  - conda install -q --yes bokeh
   - conda install -q --yes pandas
   - curl https://raw.githubusercontent.com/mila-udem/fuel/master/.travis-data.sh | bash -s -- mnist
 script:
