--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,11 @@ before_install:
 install:
   # Install all Python dependencies
   - curl -O https://raw.githubusercontent.com/mila-udem/blocks/master/req-travis-conda.txt
+  - curl -O https://raw.githubusercontent.com/mila-udem/blocks-extras/master/req-travis-conda.txt >>req-travis-conda.txt
   - conda install -q --yes python=$TRAVIS_PYTHON_VERSION --file req-travis-conda.txt
   - pip install -q -r https://raw.githubusercontent.com/bartvm/blocks/master/req-travis-pip.txt
   - pip install -q git+git://github.com/mila-udem/blocks.git -r https://raw.githubusercontent.com/mila-udem/blocks/master/requirements.txt
   - pip install -q git+git://github.com/mila-udem/blocks-extras.git 
-  - conda install -q --yes bokeh
-  - conda install -q --yes pandas
   - curl https://raw.githubusercontent.com/mila-udem/fuel/master/.travis-data.sh | bash -s -- mnist
 script:
   - export THEANO_FLAGS=floatX=$FLOATX,optimizer=fast_compile
